<resources>
    <string name="app_name">My Bills</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_login_description">Welcome</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="login_btn">Login</string>
    <string name="salvar_btn">Salvar</string>
    <string name="registre_screm">Registre screm</string>
    <string name="registrer_btn">Registrer</string>
    <string name="registra_login">Registra-se</string>
    <string name="txt_saldo">Saldo</string>
    <string name="valor_empity">R$ 0,00</string>
    <string name="txt_receitas">Receitas</string>
    <string name="txt_despesas">Despesas</string>
    <string name="valor_da_despesas">valor da Despesas</string>
    <string name="valor_da_despesa">Valor da Despesa</string>
    <string name="descrição">descrição</string>
    <string name="valor_da_receita">Valor da Receita</string>
    <string name="empty_data">Data</string>
    <string name="txt_recebido">Recebido</string>
    <string name="txt_pago">Pago</string>
    <string name="title_activity_edit_receita">EditReceitaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>